--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="page-header clear-filter" filter-color="#41414B">
         <div class="page-header-image rellax-header okta-logo" data-rellax-speed="-7"
-            style="background-image: url('assets/img/utsukushi.jpg');">
+            style="background-image: url('assets/img/turq_back.png');">
         </div>
         <div class="container">
             <div class="content-center brand">
